<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/addactivity_Product" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditTextStyle"
                android:hint="@string/addactivity_Name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditTextStyle"
                android:hint="@string/addactivity_Price"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditTextStyle"
                android:hint="@string/addactivity_Quantity"
                android:inputType="number" />

            <LinearLayout
                android:id="@+id/quantity_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrease"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="8dp"
                    android:text="-"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    style="@style/HeaderTextStyle"
                    android:text="2"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/increase"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:text="+"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/addactivity_Supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditTextStyle"
                android:hint="@string/addactivity_Name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_number"
                style="@style/EditTextStyle"
                android:hint="@string/addactivity_Number"
                android:inputType="phone" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/order" />

</LinearLayout>
